--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: ccorvalandev's page
 author: ccorvalandev
-email: your-email@domain.com
+email: kyokuru.ontheweb@gmail.com
 theme: minima
 description: > # this means to ignore newlines until "baseurl:"
   Beginnner developer on GitHub.
 
 # social links
-twitter_username: ky0kuru # DO NOT include the @ character, or else the build will fail!
-github_username:  ccorvalan # DO NOT include the @ character, or else the build will fail!
+twitter_username: KyokuruTTV # DO NOT include the @ character, or else the build will fail!
+github_username:  ccorvalandev # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
